obsolete/registry/registry-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  ingressClassName: public
  rules:
    - host: registry.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: registry
                port:
                  number: 5000

  tls:
    - hosts:
        - registry.klucsik.fun
      secretName: wildcard.klucsik.fun-tls
